seaqt/QtMultimedia/gen_qcamerainfocontrol.h

class QCameraInfoControl;
class QMetaObject;
typedef struct QCameraInfoControl QCameraInfoControl;
typedef struct QMetaObject QMetaObject;
QMetaObject* QCameraInfoControl_metaObject(const QCameraInfoControl* self);
void* QCameraInfoControl_metacast(QCameraInfoControl* self, const char* param1);
int QCameraInfoControl_metacall(QCameraInfoControl* self, int param1, int param2, void** param3);
struct seaqt_string QCameraInfoControl_tr(const char* s);
struct seaqt_string QCameraInfoControl_trUtf8(const char* s);
int QCameraInfoControl_cameraPosition(const QCameraInfoControl* self, struct seaqt_string deviceName);
int QCameraInfoControl_cameraOrientation(const QCameraInfoControl* self, struct seaqt_string deviceName);
struct seaqt_string QCameraInfoControl_tr2(const char* s, const char* c);
struct seaqt_string QCameraInfoControl_tr3(const char* s, const char* c, int n);
struct seaqt_string QCameraInfoControl_trUtf82(const char* s, const char* c);
struct seaqt_string QCameraInfoControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QCameraInfoControl_staticMetaObject();
void QCameraInfoControl_delete(QCameraInfoControl* self);